--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Site settings
 title: Palcu's Blog
 description: >
-  Strings of code and thoughts.
+  Software engineer and geek student. I like algorithms, startups and guitars.
+  I am a voracious reader.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://palcu.github.io" # the base hostname & protocol for your site
 twitter_username: AlexPalcuie
