--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://palcu.github.io" # the base hostname & protocol for your site
 twitter_username: AlexPalcuie
 github_username:  palcu
+# For SEO reasons, this is the same structure as in Blogger
+permalink: "/:year/:month/:title.html"
 
 # Build settings
 markdown: kramdown
