--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Site settings
+name: Palcu's Blog
 title: Palcu's Blog
 description: >
   Self-taught hacker. I like to code, break things and help other people.
