--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,7 @@ paginate_path: "/blog/page:num/"
 
 gems:
   - jekyll-feed
-  - jekyll-paginate
   - jekyll-gist
+  - jekyll-redirect-from
+  - jemoji
+  - jekyll-sitemap
