--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ permalink: "/:year/:month/:title.html"
 paginate: 7
 paginate_path: "/blog/page:num/"
 
+sass:
+  style: compressed
+
 gems:
   - jekyll-feed
   - jekyll-gist
