--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Theme settings
-name: Alex Palcuie | Palcu's Blog
+name: "Alex Palcuie | Palcu's Blog"
 url: "http://blog.palcu.ro"
 twitter_username: AlexPalcuie
 github_username: palcu
 
 # SEO
-title: Alex Palcuie | Palcu's Blog
+title: "Alex Palcuie | Palcu's Blog"
 description: "I solve meaningful problems using software and help other people. I write about programming, computer science, open source and other things."
 google_site_verification: 1-bnMsg8ZPhhZ9zuL4v7412nngKzSpbJMxae_2TnRWg
 twitter:
