--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Theme settings
 name: "Alex Palcuie | Palcu's Blog"
-url: "http://blog.palcu.ro"
+url: "https://blog.palcu.ro"
 twitter_username: AlexPalcuie
 github_username: palcu
 
