Define author for RSS

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ name: "Alex Palcuie | Palcu's Blog"
 url: "https://blog.palcu.ro"
 twitter_username: AlexPalcuie
 github_username: palcu
+author: Alex Palcuie
 
 # SEO
 title: "Alex Palcuie | Palcu's Blog"
