--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ social:
     - https://plus.google.com/+AlexPalcuie
 facebook:
   app_id: 202914823068704
+  publisher: "https://www.facebook.com/palcuiealex"
 logo: '/assets/glider.png'
 my_face: /assets/alex_palcuie.png
 
