--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ url: "https://blog.palcu.ro"
 twitter_username: AlexPalcuie
 github_username: palcu
 author: Alex Palcuie
+timezone: Europe/Bucharest
 
 # SEO
 title: "Alex Palcuie | Palcu's Blog"
