--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ timezone: Europe/Bucharest
 
 # SEO
 title: "Alex Palcuie | Palcu's Blog"
-description: "I solve meaningful problems using software and help other people. I write about programming, computer science, open source and other things."
+description: "I write about my life filled with stuff related to programming computers."
 google_site_verification: 1-bnMsg8ZPhhZ9zuL4v7412nngKzSpbJMxae_2TnRWg
 twitter:
   username: AlexPalcuie
