--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: "https://blog.palcu.ro"
 twitter_username: AlexPalcuie
 github_username: palcu
 author: Alex Palcuie
-timezone: Europe/Bucharest
+timezone: Europe/London
 
 # SEO
 title: "Alex Palcuie | Palcu's Blog"
